    TODO: Restore "icon from image" functionality in command line tool (window server dependency?)
    TODO: New button-based output mode?
    TODO: Save authentication password and reuse for subsequent execution
    TODO: Use bindings for defaults?

For 5.0
    TODO: It used to be that passing -u Username to the command line tool would have the bundle identifier of the resulting app be set to org.Username.Appname (unless the user overrode this with -I).
    TODO: Long GNU named params for command line tool, e.g. --some-option
    TODO: Fix Provide as Mac OS X service
    TODO: Update documentation with information about Uniform Type Identifiers
    TODO: Overhaul very old and in many respects out of date documentation
    TODO: Drop targets do not work with “Remain running after initial execution” off
    TODO: Make main application icon brighter and higher res
    TODO: Get rid of crazy pattern where objects release themselves in the window controllers. What was I thinking?
    TODO: New high res images for documentation
    TODO: File watching still broken for script path
    TODO: Use UTI methods instead of deprecated imageFileTypes
    TODO: Implement UI stuff making clear that UTIs exclude suffixes
    TODO: Test new imageFileTypes stuff + UTI change + ibtool stuff
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO: Refactor status menu item output menu generation to share code between ScriptExec and Platypus.app
    TODO: Drag and drop for icon view should be file based, not TIFF pasteboard data

    * Fixed issue with generating icon from images on retina macs (IconFamily)
    * Fixed issue with icon alpha channels (IconFamily)
    * Finder now refreshes display of overwritten applications
    * Better error handling in file operations
    * New retina icons in script type popup button
    * No longer linking to Carbon framework